--- a/index.html
+++ b/index.html
@@ -62,27 +62,27 @@
             </div>
             <div class="col-md-6">
                 <h3>Who Am I ?</h3>
-                <p>Tôi là Phan Văn Thưởng, sinh viên trường đại học Công nghệ Giao Thông Vận Tải.</p>
+                <p>My name is Thuong and I 'm a student in University Of Transport Technology</p>
                 <div class="skills-bar">
                     <p>Java</p>
                     <div class="progress">
-                        <div class="progress-bar" style="width:20%;">20%</div>
+                        <div class="progress-bar" style="width:50%;">20%</div>
                     </div>
                     <p>HTML</p>
                     <div class="progress">
-                        <div class="progress-bar" style="width:20%;">20%</div>
+                        <div class="progress-bar" style="width:20%;">70%</div>
                     </div>
                     <p>CSS</p>
                     <div class="progress">
-                        <div class="progress-bar" style="width:20%;">20%</div>
+                        <div class="progress-bar" style="width:20%;">60%</div>
                     </div>
                     <p>JavaScript</p>
                     <div class="progress">
-                        <div class="progress-bar" style="width:20%;">20%</div>
+                        <div class="progress-bar" style="width:20%;">50%</div>
                     </div>
                     <p>Bootstrap</p>
                     <div class="progress">
-                        <div class="progress-bar" style="width:20%;">20%</div>
+                        <div class="progress-bar" style="width:20%;">50%</div>
                     </div>
                 </div>
             </div>
@@ -148,24 +148,24 @@
     <div class="services" id="services">
         <div class="container">
             <h1 class="text-center">My Offered Service</h1>
-            <p class="text-center">Subscribe Easy Tutorials YouTube Chanel</p>
+            <p class="text-center">We offer services better anywhere!</p>
             <div class="row">
                 <div class="col-md-4">
                     <div class="services-box">
-                        <i class="fa fa-rocket"></i> <span>Fresh Vegetables</span>
-                        <p>Subscribe my YouTube Chanel</p>
+                        <i class="fa fa-rocket"></i> <span>PHP Web</span>
+                        <p>Our services always bring peace of mind to customers. We always respect customer opinions and strive to improve products</p>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="services-box">
                         <i class="fa fa-line-chart"></i> <span>Java Web</span>
-                        <p>Subscribe my YouTube Chanel</p>
+                        <p>Our services always bring peace of mind to customers. We always respect customer opinions and strive to improve products</p>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="services-box">
-                        <i class="fa fa-laptop"></i> <span>Graphics</span>
-                        <p>Subscribe my YouTube Chanel</p>
+                        <i class="fa fa-laptop"></i> <span>ASP.NET</span>
+                        <p>Our services always bring peace of mind to customers. We always respect customer opinions and strive to improve products</p>
                     </div>
                 </div>
 
@@ -204,7 +204,7 @@
             </button>
         </div>
         <div class="footer text-center">
-            <p>Sponsor <i class="fa fa-heart-o"> Pornhub</i></p>
+            <p>Java <i class="fa fa-heart-o"> is the best</i></p>
         </div>
     </div>
     
