Fix index.html style.css

--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
     <div class="contact" id="contact">
         <div class="container text-center">
             <h1>Contact Me</h1>
-            <p class="text-center">Subscribe Easy Tutorial YouTube Chanel to
-                <br> watch more videos on website Development and Digital Marketing
+            <p class="text-center">Contact Me
+                <br> You can contact me through the following ways
             </p>
             <div class="row">
                 <div class="col-md-4">
