--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="user-box">
             <img src="img/usermain.jpg" alt="phanthuong292" class="user-box-img1">
             <h1>Phan Văn Thưởng</h1>
-            <p>Junior Student</p>
+            <p>Student</p>
         </div>
     </div>
     <div class="scroll-btn">
